add x to all in one

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,6 +2,25 @@
 nodaemon=true
 
 [program:nginx]
-command=/usr/sbin/nginx
-stdout_events_enabled=true
-stderr_events_enabled=true
+command=nginx -g "daemon off;"
+autostart=true
+
+[program:phpfpm]
+command=php-fpm
+autostart=true
+
+[program:mysql]
+command=mysqld
+autostart=true
+
+[program:mysql]
+command=mysqld
+autostart=true
+
+[program:redis]
+command=redis-server
+autostart=true
+
+[program:ssh]
+command=sshd -D
+autostart=true
