--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,26 +1,6 @@
 [supervisord]
 nodaemon=true
 
-[program:nginx]
-command=nginx -g "daemon off;"
-autostart=true
-
-[program:phpfpm]
-command=php-fpm
-autostart=true
-
-[program:mysql]
-command=mysqld
-autostart=true
-
-[program:mysql]
-command=mysqld
-autostart=true
-
-[program:redis]
-command=redis-server
-autostart=true
-
 [program:ssh]
-command=sshd -D
+command=/usr/sbin/sshd -D
 autostart=true
